Añado el modulo de tienda online

--- a/HolaMundo/WebContent/index.html
+++ b/HolaMundo/WebContent/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <p> Pagina hola mundo - primera version del software </p>
+<p> Ahora añadimos esta nueva entrada lo que seria la version 2 </p>
+<a href="tienda.html"> Ven a mi tienda</a>
 </body>
 </html>
