nueva linea en el index

--- a/HolaMundo/WebContent/index.html
+++ b/HolaMundo/WebContent/index.html
@@ -8,5 +8,7 @@
 <p> Pagina hola mundo - primera version del software </p>
 <p> Ahora añadimos esta nueva entrada lo que seria la version 2 </p>
 <a href="tienda.html"> Ven a mi tienda</a>
+
+<h1>nueva linea</h1>
 </body>
 </html>
