Iniciamos el desarrollo de los modos de pago

--- a/HolaMundo/WebContent/index.html
+++ b/HolaMundo/WebContent/index.html
@@ -10,5 +10,6 @@
 <a href="tienda.html"> Ven a mi tienda</a>
 
 <h1>nueva linea</h1>
+<a href="modulospago.html"> acceso a modos de pago</a>
 </body>
 </html>
