--- a/HolaMundo/WebContent/modulospago.html
+++ b/HolaMundo/WebContent/modulospago.html
@@ -5,6 +5,8 @@
 <title> Modos de pago de la tienda online</title>
 </head>
 <body>
-<a href="pagotransferencia.html"> Pago con transferencia</a>
+<a href="pagotransferencia.html"> Pago con transferencia</a><br></br>
+<a href="pagopaypal.html">Pago con PayPal </a><br></br>
+<a href="tarjetacredito.html"> Pago con tarjeta de crédito</a><br></br>
 </body>
 </html>
