Añadido el folleto de venta online

--- a/HolaMundo/WebContent/index.html
+++ b/HolaMundo/WebContent/index.html
@@ -5,6 +5,8 @@
 <title>Insert title here</title>
 </head>
 <body>
+<h1> Bienvenidos a la Tienda Online de Mercadona</h1>
+<a href="oferta.html"> Acceda a las ofertas del día</a>
 <p> Pagina hola mundo - primera version del software </p>
 <p> Ahora añadimos esta nueva entrada lo que seria la version 2 </p>
 <a href="tienda.html"> Ven a mi tienda</a>
